fix low contrast date color

--- a/css/publish.css
+++ b/css/publish.css
@@ -161,7 +161,7 @@
     .date {
         font-size: .9em;
         font-weight: 500;
-        color: darkslategray;
+        color: gray;
         text-transform: uppercase;
     }
 
